# zetic_mlange_ext

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_third-party.sh
common/: CMakeLists.txt
common/inc/: nn_utils.h  utils.h
common/inc/data/: box.h  face_detection_result.h  face_landmark_result.h
feature/: CMakeLists.txt
feature/entity/: CMakeLists.txt
feature/entity/inc/: box.h
feature/face_detection/: CMakeLists.txt
feature/face_detection/inc/: face_detection_feature.h  face_detection_result.h
feature/face_detection/src/: face_detection_feature.cpp
feature/face_emotion_recognition/: CMakeLists.txt
feature/face_emotion_recognition/inc/: face_emotion_recognition_feature.h
feature/face_landmark/: CMakeLists.txt
feature/face_landmark/inc/: face_landmark_feature.h  face_landmark_result.h
feature/face_landmark/src/: face_landmark_feature.cpp
feature/trocr/: CMakeLists.txt
feature/trocr/inc/: trocr_feature.h  trocr_generator_feature.h  trocr_processor_feature.h
feature/trocr/proc/: run_test_trocr_ort.cpp  run_test_trocr_qc.cpp
feature/trocr/src/: trocr_feature.cpp  trocr_generator_feature.cpp  trocr_processor_feature.cpp
feature/whisper/: CMakeLists.txt
feature/whisper/inc/: whisper_processor.h  whisper_tokenizer.h
feature/whisper/src/: whisper_processor.cpp
feature/yolov8/: CMakeLists.txt
feature/yolov8/inc/: yolov8_feature.h
feature/yolov8/src/: yolov8_feature.cpp
src/: CMakeLists.txt  build.sh
src/common/: CMakeLists.txt
src/common/inc/: dbg_utils.h  zetic_feature_types.h
src/feature/: CMakeLists.txt
src/feature/entity/: CMakeLists.txt
src/feature/entity/inc/: box.h  landmark.h
src/feature/entity/src/: box.cpp
src/feature/face_detection/: CMakeLists.txt
src/feature/face_detection/src/: face_detection_feature.cpp
src/feature/face_emotion_recognition/: CMakeLists.txt
src/feature/face_landmark/: CMakeLists.txt
src/feature/text_to_speech/vits/: CMakeLists.txt
src/feature/text_to_speech/vits/inc/: vits_tokenizer.h
src/feature/text_to_speech/vits/src/: vits_tokenizer.cpp
src/feature/whisper/: CMakeLists.txt
src/feature/whisper/inc/: complex.h
src/feature/whisper/src/: whisper_tokenizer.cpp
src/feature/yolov8/: CMakeLists.txt
src/vision/: CMakeLists.txt
src/vision/opencv/: CMakeLists.txt
src/vision/opencv/inc/: feature_opencv.h
src/vision/opencv/src/: feature_opencv.cpp
tokenizer/: CMakeLists.txt  tokenizers-cpp
tokenizer/inc/: feature_added_token.h  feature_llamatokenizer.h  feature_special_tokens_mixin.h  feature_token_trie.h
tokenizer/proc/: run_llamatokenizer.cpp
tokenizer/src/: feature_llamatokenizer.cpp  feature_special_tokens_mixin.cpp  feature_token_trie.cpp
vision/opencv/: CMakeLists.txt  zetic-opencv-4.10.0
vision/opencv/inc/: feature_opencv.h
vision/opencv/src/: feature_opencv.cpp
wrapper/android/: .gitignore  build.gradle.kts  local.properties  settings.gradle.kts
wrapper/android/app/: build.gradle.kts
wrapper/android/ext/: build.gradle.kts
wrapper/android/ext/src/main/cpp/wrapper/ext/face_detection/: CMakeLists.txt
wrapper/android/ext/src/main/cpp/wrapper/ext/face_detection/src/: face_detection_jni_wrapper.cpp
wrapper/android/ext/src/main/cpp/wrapper/ext/face_emotion_recognition/: CMakeLists.txt
wrapper/android/ext/src/main/cpp/wrapper/ext/face_emotion_recognition/src/: face_emotion_recognition_jni_wrapper.cpp
wrapper/android/ext/src/main/cpp/wrapper/ext/face_landmark/: CMakeLists.txt
wrapper/android/ext/src/main/cpp/wrapper/ext/face_landmark/src/: face_landmark_jni_wrapper.cpp
wrapper/android/ext/src/main/cpp/wrapper/ext/yolov8/: CMakeLists.txt
wrapper/android/ext/src/main/cpp/wrapper/ext/yolov8/src/: yolov8_jni_wrapper.cpp
wrapper/android/ext/src/main/cpp/wrapper/jniutils/: CMakeLists.txt
wrapper/android/ext/src/main/cpp/wrapper/jniutils/inc/: jni_memory_manager.h  jni_utils.h  memory_manager.h
wrapper/android/ext/src/main/cpp/wrapper/jniutils/src/: jni_memory_manager.cpp  jni_utils.cpp  memory_manager.cpp
wrapper/android/gradle/: libs.versions.toml
wrapper/android/src/main/cpp/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/face_detection/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/face_landmark/src/: face_landmark_jni_wrapper.cpp
wrapper/android/src/main/cpp/wrapper/ext/opencv/src/: opencv_image_utils.cpp
wrapper/android/src/main/cpp/wrapper/ext/text_to_speech/vits/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/text_to_speech/vits/src/: vits_jni_wrapper.cpp
wrapper/android/src/main/cpp/wrapper/ext/whisper/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/whisper/src/: whisper_jni_wrapper.cpp
wrapper/android/src/main/cpp/wrapper/ext/yolov8/: CMakeLists.txt
wrapper/android/src/main/cpp/wrapper/ext/yolov8/src/: yolov8_jni_wrapper.cpp
wrapper/ios/bridge/: CMakeLists.txt
wrapper/ios/bridge/wrapper/: CMakeLists.txt
wrapper/ios/bridge/wrapper/ext/: CMakeLists.txt
wrapper/ios/bridge/wrapper/ext/feature/face_landmark/src/: face_landmark_swift_wrapper.cpp
wrapper/ios/bridge/wrapper/ext/feature/yolov8/src/: yolov8_swift_wrapper.hpp
wrapper/ios/bridge/wrapper/opencv/: CMakeLists.txt
wrapper/ios/bridge/wrapper/yolov8/src/: yolov8_swift_wrapper.cpp
wrapper/ios/ext/bridge/wrapper/face_detection/: CMakeLists.txt
wrapper/ios/ext/bridge/wrapper/face_detection/src/: face_detection_swift_wrapper.cpp  face_detection_swift_wrapper.h
wrapper/ios/ext/bridge/wrapper/face_emotion_recognition/: CMakeLists.txt
wrapper/ios/ext/bridge/wrapper/face_emotion_recognition/src/: face_emotion_recognition_swift_wrapper.cpp  face_emotion_recognition_swift_wrapper.h
wrapper/ios/ext/bridge/wrapper/face_landmark/: CMakeLists.txt
wrapper/ios/ext/bridge/wrapper/face_landmark/src/: face_landmark_swift_wrapper.h
wrapper/ios/ext/bridge/wrapper/whisper/: CMakeLists.txt
wrapper/ios/ext/bridge/wrapper/whisper/src/: whisper_swift_wrapper.cpp  whisper_swift_wrapper.h
wrapper/ios/ext/bridge/wrapper/yolov8/: CMakeLists.txt
(+110 files in other folders)
